# tinyNetwotking

./: AbstractPacketFactory.h  CMakeLists.txt  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  TcpServerClient.cpp  clientDispatcher.cpp  clientDispatcher.h  dispatcher.cpp  dispatcher.h  general.h  networkDispatcher.cpp  networkDispatcher.h  packet.cpp  packet.h  packetDirection.h  serverDispatcher.cpp  serverDispatcher.h
net/: clientThread.cpp  clientThread.h  networkDispatcher.cpp  networkDispatcher.h  packet.cpp  packet.h
tinyNet/: abstractNetworkHandler.h  abstractPacketFactory.h  clientDispatcher.cpp  clientDispatcher.h  dispatcher.cpp  dispatcher.h  packet.cpp  packet.h  serverDispatcher.cpp  serverDispatcher.h  universalPacket.cpp  universalPacket.h
tinyNet/tcp/: baseClient.h  client.cpp  client.h  general.h  server.cpp  server.h  serverClient.cpp  serverClient.h  serverStatus.h  socketStatus.h  socketType.h  threadManageType.h  threadPool.h
